--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 #landingHeader {
     text-align: center;
     color: red;
-    width: 70%;
+    width: 100%;
     float: left;
     margin-block-start: 0em;
     margin-block-end: 0em;
@@ -61,6 +61,23 @@ p {
     width: 300px;
     align-content: center;
 }
+/* This will be shown after the quiz finishes */
+#endPage {
+    margin-top: 50px;
+    background-color: eggshell;
+    margin-left: 330px;
+    width: 300px;
+    align-content: center;
+}
+
+/* This will be shown when High Scores Button is clicked */
+#highScoresPage {
+    margin-top: 50px;
+    background-color: eggshell;
+    margin-left: 330px;
+    width: 300px;
+    align-content: center;
+}
 
 #startButton {
     text-align: center;
@@ -75,4 +92,29 @@ p {
     cursor: pointer;
     border-radius: 8px;
     
+}
+
+#startButton2 {
+    text-align: center;
+    background-color:red;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0px;
+    cursor: pointer;
+    border-radius: 8px;
+    
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
